Fix display of switches on mobile

--- a/css/dashboard_mobile.css
+++ b/css/dashboard_mobile.css
@@ -3,30 +3,28 @@ body.dashMobile section.dashCategory div.row.divider:first-of-type {
     display: none;
 }
 
-table.mobileitem{
+body.dashMobile table.mobileitem{
     width: 100%;
     padding: 0;
     margin-top:20px;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 }
-table.mobileitem > thead > tr {
+body.dashMobile table.mobileitem > thead > tr {
 	background: none;
 }
-table.mobileitem > thead > tr > th:first-of-type{
+body.dashMobile table.mobileitem > thead > tr > th:first-of-type{
     font-family: main-font-bold;
     flex-grow:1;
 }
 
-table.mobileitem .status > span > span{margin-right:7px;}
-
-.mobileitem th{
+body.dashMobile table.mobileitem th{
     box-shadow: none;
     display:inline;
     text-shadow: none;
     background: var(--main-border-color);
     color: var(--main-text-color);
 }
-.mobileitem tr{
+body.dashMobile table.mobileitem tr{
     background: var(--main-item-bg-color);
     display: flex;
     flex-grow: 1;
@@ -34,10 +32,10 @@ table.mobileitem .status > span > span{margin-right:7px;}
     justify-content: space-between;
     width: 100%;
 }
-.mobileitem tr:hover {
+body.dashMobile table.mobileitem tr:hover {
     background: var(--main-item-bg-color);
 }
-.mobileitem td{
+body.dashMobile table.mobileitem td{
     display: inline-flex;
     color: var(--main-text-color);
     flex-grow: 1;
@@ -48,18 +46,15 @@ table.mobileitem .status > span > span{margin-right:7px;}
     border-color: var(--main-bg-color);
 }
 
-.mobileitem td:last-child{
+body.dashMobile table.mobileitem td:last-child{
     font-family: main-font-bold;   
 }
-.mobileitem td label{
+body.dashMobile table.mobileitem td label{
     white-space: nowrap;
     height:50%;
 }
 body.dashMobile table.mobileitem td#name,
 body.dashMobile table.mobileitem td.name{
-    font-size: 100%;
-    position: inherit;
-    padding:0 0 0 10px!important;
     height:auto;
     min-height:30px;
 }
@@ -68,32 +63,42 @@ body.dashMobile table.mobileitem td.name img{
     margin-right:10px;
     vertical-align: middle;
 }
-.mobileitem .btn-mini{
-    margin-left: 2px;
-    font-family: main-font-bold;
-    text-shadow: none;
-}
-#dashcontent .mobileitem .dimslider{
-  border: none;
-  border-radius: 3px;
-  box-shadow: none;
-  height: 5px;
-}
-#dashcontent .mobileitem .dimslider .ui-slider-range{
-  background: rgba(11, 151, 205, 0.5);
-}
-#dashcontent .mobileitem .dimslider .ui-slider-handle{
-  width: 15px;
-  height: 15px;
-  background: var(--main-blue-color);
-  border-radius: 50%;
-  top: -6px;
-}
-#dashcontent .mobileitem td#status,
-#dashcontent .mobileitem td.status{
+body.dashMobile table.mobileitem td#status,
+body.dashMobile table.mobileitem td.status{
     max-width:60%;
     justify-content: flex-end;
     flex-grow: 1;
     flex-shrink: 1;
     text-align: end;
+}
+body.dashMobile table.mobileitem .status > span > span{
+    margin-right:7px;
+}
+body.dashMobile table.mobileitem .btn-mini{
+    margin-left: 2px;
+    font-family: main-font-bold;
+    text-shadow: none;
+}
+body.dashMobile table.mobileitem .dimslider{
+    border: none;
+    border-radius: 3px;
+    box-shadow: none;
+    height: 5px;
+}
+body.dashMobile table.mobileitem .dimslider .ui-slider-range{
+    background: rgba(11, 151, 205, 0.5);
+}
+body.dashMobile table.mobileitem .dimslider .ui-slider-handle{
+    width: 15px;
+    height: 15px;
+    background: var(--main-blue-color);
+    border-radius: 50%;
+    top: -6px;
+}
+body.dashMobile table.mobileitem .selectorlevels .ui-selectmenu-button{
+    display: none;
+}
+
+body.dashMobile table.mobileitem .selectorlevels{
+    width: 100%;
 }
