--- a/css/switch.css
+++ b/css/switch.css
@@ -1,7 +1,6 @@
 .switch {
   position: relative;
   display: inline-block;
-  margin-top: 10px;
   margin-right: 10px;
   width: 40px;
   height: 20px;
